tests/baselines/reference/unicodeEscapesInNames01(target=es5).errors.txt
PrivateIdentifierNameWithEscape1.ts(2,5): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
PrivateIdentifierNameWithEscape2.ts(2,5): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
PrivateIdentifierNameWithExtendedEscape1.ts(2,5): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
PrivateIdentifierNameWithExtendedEscape2.ts(2,5): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.


==== identifierVariableWithEscape1.ts (0 errors) ====
    export let \u0078 = 10;
    x++;
    
==== identifierVariableWithEscape2.ts (0 errors) ====
    export let x\u0078 = 10;
    xx++;
    
==== identifierVariableWithExtendedEscape1.ts (0 errors) ====
    export let \u{78} = 10;
    x++;
    
==== identifierVariableWithExtendedEscape2.ts (0 errors) ====
    export let x\u{78} = 10;
    xx++;
    
==== IdentifierNameWithEscape1.ts (0 errors) ====
    export class IdentifierNameWithEscape1 {
        \u0078: number;
    
        constructor() {
            this.\u0078 = 0;
        }
    
        doThing() {
            this.x = 42;
        }
    }
    
==== IdentifierNameWithEscape2.ts (0 errors) ====
    export class IdentifierNameWithEscape2 {
        x\u0078: number;
    
        constructor() {
            this.x\u0078 = 0;
        }
    
        doThing() {
            this.xx = 42;
        }
    }
    
==== IdentifierNameWithExtendedEscape1.ts (0 errors) ====
    export class IdentifierNameWithExtendedEscape1 {
        \u{78}: number;
    
        constructor() {
            this.\u{78} = 0;
        }
    
        doThing() {
            this.x = 42;
        }
    }
    
==== IdentifierNameWithExtendedEscape2.ts (0 errors) ====
    export class IdentifierNameWithExtendedEscape2 {
        x\u{78}: number;
    
        constructor() {
            this.x\u{78} = 0;
        }
    
        doThing() {
            this.xx = 42;
        }
    }
    
==== PrivateIdentifierNameWithEscape1.ts (1 errors) ====
    export class PrivateIdentifierWithEscape1 {
        #\u0078: number;
        ~~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    
        constructor() {
            this.#\u0078 = 0;
        }
    
        doThing() {
            this.#x = 42;
        }
    }
    
==== PrivateIdentifierNameWithEscape2.ts (1 errors) ====
    export class PrivateIdentifierWithEscape2 {
        #x\u0078: number;
        ~~~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    
        constructor() {
            this.#x\u0078 = 0;
        }
    
        doThing() {
            this.#xx = 42;
        }
    }
    
==== PrivateIdentifierNameWithExtendedEscape1.ts (1 errors) ====
    export class PrivateIdentifierWithExtendedEscape1 {
        #\u{78}: number;
        ~~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    
        constructor() {
            this.#\u{78} = 0;
        }
    
        doThing() {
            this.#x = 42;
        }
    }
    
==== PrivateIdentifierNameWithExtendedEscape2.ts (1 errors) ====
    export class PrivateIdentifierWithExtendedEscape2 {
        #x\u{78}: number;
        ~~~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    
        constructor() {
            this.#x\u{78} = 0;
        }
    
        doThing() {
            this.#xx = 42;
        }
    }
    